--- a/ptthalo/ieta18.html
+++ b/ptthalo/ieta18.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>A dolgok internete</h1>
+        <h1>A dolgok internete (2+6 óra)</h1>
 
         <p>A témakör célja az IoT (dolgok internete) fogalmának és gyakorlati megvalósítási lehetőségeinek bemutatása. A témakör elsajátítását követően a tanuló:</p>
 
