--- a/ptthalo/ieta21.html
+++ b/ptthalo/ieta21.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Informatikai és távközlési hálózatok napjainkban</h1>
+        <h1>Informatikai és távközlési hálózatok napjainkban (3+5 óra)</h1>
 
         <p>A témakör célja annak bemutatása, mire használhatók a távközlési hálózatok, illetve milyen aktuális és várható trendek figyelhetők meg ezen a területen. A témakör elsajátítását követően a tanuló:</p>
 
