--- a/ptthalo/ieta22.html
+++ b/ptthalo/ieta22.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása</h1>
+        <h1>Hálózati protokollok és modellek, végponti eszközök hálózati beállítása (7+11 óra)</h1>
 
         <p>A témakör célja, hogy a tanuló megismerje a leggyakrabban használt hálózati eszközöket és a rétegmodelleket, az átviteli közegek jellemzőit, valamint képes legyen Ethernet-kábel készítésére. A témakör elsajátítását követően a tanuló:</p>
 
