--- a/ptthalo/ieta23.html
+++ b/ptthalo/ieta23.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása</h1>
+        <h1>Kapcsolás Ethernet hálózatokon, a kapcsoló alapszintű beállítása (7+13 óra)</h1>
 
         <p>A témakör feldolgozásával a tanulók megismerik az adatbeágyazás menetét, az Ethernet-technológia jellemzőit és a kapcsolók működési elvét. Cél, hogy elsajátítsák legalább egy terminálemulációs szoftver használatát, és elvégezzék a második rétegbeli kapcsoló alapkonfigurációját. A témakör elsajátítását követően a tanuló:</p>
 
