--- a/ptthalo/ieta24.html
+++ b/ptthalo/ieta24.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása</h1>
+        <h1>A hálózati réteg, IPv4-es és IPv6-os címzés, a forgalomirányító alapszintű beállítása (3+5 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók megismerjék a hálózati réteg feladatát és a logikai címzés szerepét; az IPv4-címek szerkezetét, jellemzőit. Megértsék a címmeghatározó protokollok működését IPv4-környezetben és képesek legyenek a címmeghatározó folyamat üzeneteinek azonosítására, adatforgalom elfogására alkalmas szoftver használatával. Átlássák az alhálózatok kialakításának lépéseit, és képesek legyenek adott méretű alhálózatok kialakítására. Forgalomirányítási alapismereteket szerezzenek, értelmezni tudják az irányítótábla bejegyzéseit IPv4-környezetben. Megismerjék a forgalomirányítók működését, szerepét, el tudják végezni a forgalomirányító alapkonfigurációját. Tisztában legyenek az alapértelmezett átjáró szerepével, és be tudjanak állítani alapértelmezett átjárót a klienseszközökön, kapcsolókon. A témakör elsajátítását követően a tanuló:</p>
 
