--- a/ptthalo/ieta25.html
+++ b/ptthalo/ieta25.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>A szállítási és az alkalmazási réteg</h1>
+        <h1>A szállítási és az alkalmazási réteg (7+11 óra)</h1>
 
         <p>A témakör célja a szállítási réteg két fő protokollja, a TCP és a UDP ismertetése. Bemutatja a TCP/IP-modell alkalmazási rétegének célját és a benne használt protokollokat, különös tekintettel a DNS- és DHCP-protokollokra, a webes és elektronikus levelezési, valamint fájlmegosztási protokollokra. A témakör elsajátítását követően a tanuló:</p>
 
