--- a/ptthalo/ieta26.html
+++ b/ptthalo/ieta26.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>Otthoni és kisvállalati hálózat építése és beállítása</h1>
+        <h1>Otthoni és kisvállalati hálózat építése és beállítása (3+5 óra)</h1>
 
         <p>A témakör célja, hogy a tanulók az eddigi ismereteik felhasználásával képesek legyenek otthoni és kivállalati hálózat összetevőinek azonosítására, kisméretű hálózat fizikai kiépítésére, IP-címzés beállítására, és az alapvető kapcsolódási hibák elhárításra. A témakör elsajátítását követően a tanuló:</p>
 
