--- a/ptthalo/ieta27.html
+++ b/ptthalo/ieta27.html
@@ -36,7 +36,7 @@
         </nav>
       </aside>
       <section>
-        <h1>IT-biztonság</h1>
+        <h1>IT-biztonság (10+20 óra)</h1>
 
         <p>A témakör a számítógépes biztonsággal foglalkozik. Célja, hogy a tanulók megismerjék a legfontosabb támadási módokat, a kártevők típusait és az azok elleni védekezést. Tudják, milyen hálózati támadások léteznek, milyen biztonsági irányelveket kell követni az adatok védelme érdekében. Megismerjék a Windows operációs rendszerben található biztonsági segédeszközöket és beállításokat. Képesek legyenek vezeték nélküli eszközök biztonságos beállítására. A témakör elsajátítását követően a tanuló:</p>
 
