--- a/4-elektronika/elektr.html
+++ b/4-elektronika/elektr.html
@@ -7,6 +7,7 @@
 
     <title>Elektronika</title>
     <link rel="stylesheet" href="../static/main.css">
+    <link rel="stylesheet" href="panel.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -46,7 +47,7 @@
 
         <h1 id="ptt">Bevezetés az elektronikába (2+26 óra)</h1>
 
-        <p>A tantárgy oktatásának alapvető célja azoknak az ismereteknek a megalapozása, gyakorlatba ültetése, amelyek képessé teszik a tanulót arra, hogy megértse a szakmájában előforduló elektronikai alkatrészek alkalmazásának célját és működési elvét. A tanuló a tantárgy tanulása során biztos alapokat szerez alapvető elektronikai kapcsolások értelmezéséhez, valamint adott probléma és a megoldásához vezető út felismeréséhez. A téma feldolgozása során a tanulók megismerik a környezeti jellemzők számítógépes megfigyelésének lehetőségeit, az adott jelenséghez megfelelő érzékelők kiválasztásának szempontjait. Jártasságot szereznek a számítógépes mérésekben, valamint megismerkednek a virtuális műszerek felépítésével és alkalmazásával. A foglalkozássorozat vége felé megjelenő, közvetlenül kipróbálható kísérletek az adatátviteli technikák megismerését készítik elő, amikről a tanulók a későbbiekben tanulnak majd. Ebben a tanulási egységben nem az a cél, hogy a diákok megismerjék az alkalmazott elektronikai alkatrészek működésének fizikai alapjait, hanem hogy megtapasztalják, léteznek bizonyos elektronikai építőelemek, amelyek segítségével a környezet paraméterei mérhetők, vagy amelyek befolyásolni tudják a környezet jellemzőit. Az elsődleges cél az alkotás, a megtapasztalás, a vizsgálódás. A mért adatok értelmezési, kiértékelési képességének kialakulása, a következtetések levonása megalapozza további szakmai tanulmányaikat. A tantárgy oktatásának fontos feladata az is, hogy fejlessze a tanulók problémamegoldó készségét, kialakítsa bennük az új ismeretek megszerzése iránti igényt és az azok elsajátításához szükséges készségeket. Minden témakört – még az alapismereteket is – célszerű méréssel szemléltetni, hogy a tanulók átlássák a feldolgozandó téma gyakorlati jelentőségét és kapcsolatát a választott szakmával.</p>
+        <p>A tantárgy oktatásának alapvető célja azoknak az ismereteknek a megalapozása, gyakorlatba ültetése, amelyek képessé teszik a tanulót arra, hogy megértse a szakmájában előforduló elektronikai alkatrészek alkalmazásának célját és működési elvét. A tanuló a tantárgy tanulása során biztos alapokat szerez alapvető elektronikai kapcsolások értelmezéséhez, valamint adott probléma és a megoldásához vezető út felismeréséhez. A téma feldolgozása során a tanulók megismerik a környezeti jellemzők számítógépes megfigyelésének lehetőségeit, az adott jelenséghez megfelelő érzékelők kiválasztásának szempontjait. Jártasságot szereznek a számítógépes mérésekben, valamint megismerkednek a virtuális műszerek felépítésével és alkalmazásával. A foglalkozássorozat vége felé megjelenő, közvetlenül kipróbálható kísérletek az adatátviteli technikák megismerését készítik elő, amikről a tanulók a későbbiekben tanulnak majd. Ebben a tanulási egységben nem az a cél, hogy a diákok megismerjék az alkalmazott elektronikai alkatrészek működésének fizikai alapjait, hanem hogy megtapasztalják, léteznek bizonyos elektronikai építőelemek, amelyek segítségével a környezet paraméterei mérhetők, vagy amelyek befolyásolni tudják a környezet jellemzőit. Az elsődleges cél az alkotás, a megtapasztalás, a vizsgálódás. A mért adatok értelmezési, kiértékelési képességének kialakulása, a következtetések levonása megalapozza további szakmai tanulmányaikat. A tantárgy oktatásának fontos feladata az is, hogy fejlessze a tanulók problémamegoldó készségét, kialakítsa bennük az új ismeretek megszerzése iránti igényt és az azok elsajátításához szükséges készségeket. Minden témakört - még az alapismereteket is - célszerű méréssel szemléltetni, hogy a tanulók átlássák a feldolgozandó téma gyakorlati jelentőségét és kapcsolatát a választott szakmával.</p>
         <p>A tanulók megismerkednek alap áramköri elemekkel (ellenállás, kondenzátor, tranzisztor, LED stb.) ezekből előre elkészített (próba) panelen egyszerűbb áramköröket építenek forrasztásos technológiával. Ezen áramkörökön végeznek méréseket bizonyítva az elektronika alaptörvényeit.</p>
         <p>A tananyag kifejtése során jól alkalmazhatók a National Instruments iskolák számára elérhető hardver-, illetve szoftvereszközei, a tematika is ezekhez igazodik. A feldolgozási egységek azonban csak minták, szabadon átültethetők Raspberry Pi, Arduino környezetre és az ezekhez kapható készletekre. A mintaként kidolgozott tematika segíti a tanulókat, hogy iparban is alkalmazott megoldásokat ismerhessenek meg.</p>
         <p>A mintatematika szerint haladva minden foglalkozás esetében szükséges eszközök az osztálytermi LabVIEW-fejlesztő és -futtató környezet, diákonként egy myDAQ hardver és szenzorkészlet, csavarhúzó, multiméter. A foglalkozási egységek hozzájárulnak a munkaerőpiacon elvárt készségek kialakulásához, a szakmai szókincs, valamint a csapatmunkára való képesség fejlődéséhez.</p>
@@ -55,77 +56,109 @@
 
         <p>A témakörben az alábbi ismeretek és gyakorlati készségek elsajátítására kerül sor:</p>
 
-        <h3>Egyszerűbb áramkör építése:</h3>
-        <p>Forrasztóállomás megismerése, a forrasztás eszközei<br>Egyszerűbb áramkör építése próbapanelen<br>Paraméterek mérése multiméterrel</p>
+        <div class="dropdown">
+          <button class="dropdown-btn">Egyszerűbb áramkör építése:</button>
+          <div class="dropdown-content">
+            <p>Forrasztóállomás megismerése, a forrasztás eszközei<br>Egyszerűbb áramkör építése próbapanelen<br>Paraméterek mérése multiméterrel</p>
+          </div>
+        </div>
 
-        <h3>Bevezetés a LabVIEW grafikus programozásba:</h3>
-        <ul>
-          <li>A hőmérő szenzor bemutatása, a számítógépes mérés elvégzése, a mérőszoftver elemeinek értelmezése, a jelváltozások megfigyelése</li>
-          <li>A méréshez szükséges hardverelemek és azok feladatának megismerése</li>
-          <li>A javasolt elektronikus tananyagtartalmaknál felsorolt webcastok megtekintése (Bevezetés a myDAQ használatába)</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">Bevezetés a LabVIEW grafikus programozásba:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>A hőmérő szenzor bemutatása, a számítógépes mérés elvégzése, a mérőszoftver elemeinek értelmezése, a jelváltozások megfigyelése</li>
+              <li>A méréshez szükséges hardverelemek és azok feladatának megismerése</li>
+              <li>A javasolt elektronikus tananyagtartalmaknál felsorolt webcastok megtekintése (Bevezetés a myDAQ használatába)</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>A LabVIEW környezet megismerése:</h3>
-        <ul>
-          <li>A VI felépítése</li>
-          <li>Adattípusok, adatvezetékek</li>
-          <li>Matematikai műveletek</li>
-          <li>Control, Indicator szerepe</li>
-          <li>"Hello World!" típusú program készítése, futtatása (két szám összegének meghatározása, téglalap kerületének, területének kiszámítása)</li>
-          <li>Egyszeres lefutás összevetése az iparban alkalmazott LOOP-megvalósítással</li>
-          <li>VI indítása, STOP funkció</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">A LabVIEW környezet megismerése:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>A VI felépítése</li>
+              <li>Adattípusok, adatvezetékek</li>
+              <li>Matematikai műveletek</li>
+              <li>Control, Indicator szerepe</li>
+              <li>"Hello World!" típusú program készítése, futtatása (két szám összegének meghatározása, téglalap kerületének, területének kiszámítása)</li>
+              <li>Egyszeres lefutás összevetése az iparban alkalmazott LOOP-megvalósítással</li>
+              <li>VI indítása, STOP funkció</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>A grafikus programfejlesztés építőelemei:</h3>
-        <ul>
-          <li>Algebrai műveletek</li>
-          <li>Relációk</li>
-          <li>Logikai műveletek</li>
-          <li>Különféle LOOP-ok</li>
-          <li>Elágazások, a SELECT-, illetve a CASE-szerkezetek</li>
-          <li>Numeric Control, Boolean Indicator</li>
-          <li>Waveform Chart, Waveform Graph</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">A grafikus programfejlesztés építőelemei:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>Algebrai műveletek</li>
+              <li>Relációk</li>
+              <li>Logikai műveletek</li>
+              <li>Különféle LOOP-ok</li>
+              <li>Elágazások, a SELECT-, illetve a CASE-szerkezetek</li>
+              <li>Numeric Control, Boolean Indicator</li>
+              <li>Waveform Chart, Waveform Graph</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>Mérés a myDAQ használatával:</h3>
-        <ul>
-          <li>Hőfokfüggő ellenállás alkalmazása</li>
-          <li>Fotoellenállás alkalmazása</li>
-          <li>Audiobemenet alkalmazása</li>
-          <li>Analóg-, illetve digitális jelek a műszaki gyakorlatban</li>
-          <li>Időzítési lehetőségek</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">Mérés a myDAQ használatával:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>Hőfokfüggő ellenállás alkalmazása</li>
+              <li>Fotoellenállás alkalmazása</li>
+              <li>Audiobemenet alkalmazása</li>
+              <li>Analóg-, illetve digitális jelek a műszaki gyakorlatban</li>
+              <li>Időzítési lehetőségek</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>Jelkondicionálás:</h3>
-        <ul>
-          <li>Filter</li>
-          <li>Express VI-ok</li>
-          <li>Pulzusmérő létrehozása</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">Jelkondicionálás:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>Filter</li>
+              <li>Express VI-ok</li>
+              <li>Pulzusmérő létrehozása</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>Virtuális mérőműszerek működtetése:</h3>
-        <ul>
-          <li>Audio input, audio output használata</li>
-          <li>Gyorsulásmérő alkalmazása</li>
-          <li>Mintavételi frekvencia megváltoztatása</li>
-          <li>A myDAQ alkalmazása multiméterként</li>
-          <li>Prezentáció</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">Virtuális mérőműszerek működtetése:</button>
+          <div class="dropdown-content">
+            <ul>
+              <li>Audio input, audio output használata</li>
+              <li>Gyorsulásmérő alkalmazása</li>
+              <li>Mintavételi frekvencia megváltoztatása</li>
+              <li>A myDAQ alkalmazása multiméterként</li>
+              <li>Prezentáció</li>
+            </ul>
+          </div>
+        </div>
 
-        <h3>Projektfeladatok:</h3>
-        <p>Javasolt, hogy a tanulók párban, esetleg három fős csoportokban dolgozzanak, és a csapatok más-más projektfeladatot kapjanak.<br>Lehetséges projekttémák:</p>
-        <ul>
-          <li>Hőmérséklet-szabályzás (hőmérő, valamint ventilátor alkalmazása)</li>
-          <li>Termodinamikai egyensúly megfigyelése</li>
-          <li>Erőmérés (rezisztív szenzor a szenzorcsomagban)</li>
-          <li>Súrlódási együttható meghatározása lejtő segítségével</li>
-          <li>Gépek rezgése (gyorsulásmérő alkalmazásával)</li>
-          <li>Alkonykapcsoló</li>
-          <li>Egyenletes-, illetve gyorsuló mozgás paramétereinek vizsgálata (optikai érzékelő a szenzorcsomagban)</li>
-          <li>Hangsebesség mérése mikrofonnal (myDAQ-hoz csatlakoztatható mikrofon a szenzorcsomagban)</li>
-          <li>Különféle színű tárgyak válogatása reflexiós optikai érzékelővel (érzékelő a szenzorcsomagban)</li>
-          <li>Savas, lúgos kémhatású oldatok vizsgálata indikátorfolyadékkal, optikai érzékelővel</li>
-        </ul>
+        <div class="dropdown">
+          <button class="dropdown-btn">Projektfeladatok:</button>
+          <div class="dropdown-content">
+            <p>Javasolt, hogy a tanulók párban, esetleg három fős csoportokban dolgozzanak, és a csapatok más-más projektfeladatot kapjanak.<br>Lehetséges projekttémák:</p>
+              <ul>
+                <li>Hőmérséklet-szabályzás (hőmérő, valamint ventilátor alkalmazása)</li>
+                <li>Termodinamikai egyensúly megfigyelése</li>
+                <li>Erőmérés (rezisztív szenzor a szenzorcsomagban)</li>
+                <li>Súrlódási együttható meghatározása lejtő segítségével</li>
+                <li>Gépek rezgése (gyorsulásmérő alkalmazásával)</li>
+                <li>Alkonykapcsoló</li>
+                <li>Egyenletes-, illetve gyorsuló mozgás paramétereinek vizsgálata (optikai érzékelő a szenzorcsomagban)</li>
+                <li>Hangsebesség mérése mikrofonnal (myDAQ-hoz csatlakoztatható mikrofon a szenzorcsomagban)</li>
+                <li>Különféle színű tárgyak válogatása reflexiós optikai érzékelővel (érzékelő a szenzorcsomagban)</li>
+                <li>Savas, lúgos kémhatású oldatok vizsgálata indikátorfolyadékkal, optikai érzékelővel</li>
+              </ul>
+          </div>
+        </div>
 
         <h1 id="mikro">Mikroelektronika</h1>
 
@@ -165,5 +198,7 @@
       <p>Csak az önálló tanulás bír tartós értékkel. &#x2022; <a href="https://www.demokratikusneveles.hu/blog/gatto-miert-nem-oktatnak/" target="_blank">John Taylor Gatto</a></p>
       <img src="../static/cc.logo.large.png" alt="cc">
     </footer>
+
+    <script src="panel.js"></script>
   </body>
 </html>
