--- a/beginhalo.html
+++ b/beginhalo.html
@@ -48,7 +48,7 @@
       </a>
 
       <a href="osialk/bev.html">
-        <img src="osialk/google-76517_1280.png" alt="google-76517_1280">
+        <img src="osialk/email-3249062_1280.png" alt="email-3249062_1280">
         <article>
           <h3>Az OSI-modell felső rétegei</h3>
         </article>
