--- a/beginhalo.html
+++ b/beginhalo.html
@@ -69,7 +69,7 @@
       <a href="ptthalo/ieta21.html">
         <img src="5-haloanyagok/rj-45-3137487_1280-2.png" alt="rj-45-3137487_1280-2">
         <article>
-          <h3>Informatikai és távközlési alapok II.</h3>
+          <h3>10 - Informatikai és távközlési alapok II.</h3>
           <p></p>
         </article>
       </a>
@@ -77,15 +77,22 @@
       <a href="ptthalo/halo11.html">
         <img src="5-haloanyagok/network-5594779_1280.png" alt="network-5594779_1280">
         <article>
-          <h3>Hálózatok I.</h3>
+          <h3>11 - Hálózatok I.</h3>
           <p></p>
+        </article>
+      </a>
+
+      <a href="ptthalo/halo17.html">
+        <img src="5-haloanyagok/social-3064515_1280-169.jpg" alt="social-3064515_1280-169">
+        <article>
+          <h3>12 - Hálózatok I.</h3>
         </article>
       </a>
 
       <a href="ptthalo/halo21.html">
         <img src="5-haloanyagok/halohatter-2.jpg" alt="halohatter-2">
         <article>
-          <h3>Hálózatok II.</h3>
+          <h3>13 - Hálózatok II.</h3>
           <p></p>
         </article>
       </a>
@@ -93,7 +100,7 @@
       <a href="5-haloprogiot/hpiot1.html">
         <img src="5-haloprogiot/communication-1439132_1280-169.jpg" alt="communication-1439132_1280-169">
         <article>
-          <h3>Hálózat programozása és IoT</h3>
+          <h3>13 - Hálózat programozása és IoT</h3>
           <p></p>
         </article>
       </a>
