--- a/3-rendszer/android.html
+++ b/3-rendszer/android.html
@@ -26,6 +26,7 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
+            <li><a href="virtkont.html">Virtualizáció és felhőtechnológiák</a></li>
             <li><a href="os.html">Operációs rendszerek</a></li>
             <li><a href="fajl.html">Fájlok, fájlrendszerek</a></li>
             <li><a href="segedpr.html">Segédprogramok</a></li>
@@ -33,7 +34,6 @@
             <li><a href="linux.html">Linux</a></li>
             <li><a href="#" id="aktiv">Android</a></li>
             <li><a href="unix.html">Unix</a></li>
-            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
             <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
