--- a/3-rendszer/virtkont.html
+++ b/3-rendszer/virtkont.html
@@ -26,6 +26,7 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
+            <li><a href="#" id="aktiv">Virtualizáció és felhőtechnológiák</a></li>
             <li><a href="os.html">Operációs rendszerek</a></li>
             <li><a href="fajl.html">Fájlok, fájlrendszerek</a></li>
             <li><a href="segedpr.html">Segédprogramok</a></li>
@@ -33,55 +34,11 @@
             <li><a href="linux.html">Linux</a></li>
             <li><a href="android.html">Android</a></li>
             <li><a href="unix.html">Unix</a></li>
-            <li><a href="#" id="aktiv">Virtualizáció és konténerek</a></li>
             <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <h1>Szerverek és felhőszolgáltatások - Virtualizáció és konténerek (8+54 óra)</h1>
-        <p>A témakör célja az ismertebb virtualizációs technológiák mélyebb megismerése, a konténertechnológiákat is beleértve, valamint ezek segítségével virtuális gépek és konténerek létrehozása és menedzselése. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
-
-        <div class="dropdown">
-          <button class="dropdown-btn">Ismeri a virtualizáció megvalósítási módjait, a szerver- és kliensoldali virtualizáció eszközeit.</button>
-          <div class="dropdown-content">
-            <p>Ez az első panel tartalma.</p>
-            <p>További szöveg itt.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <button class="dropdown-btn">Képes virtuális gépek telepítésére, hardverparamétereik beállítására, pillanatképek létrehozására.</button>
-          <div class="dropdown-content">
-            <p>Ez az első panel tartalma.</p>
-            <p>További szöveg itt.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <button class="dropdown-btn">Ismeri a konténer fogalmát, alkalmazási lehetőségeit.</button>
-          <div class="dropdown-content">
-            <p>Ez az első panel tartalma.</p>
-            <p>További szöveg itt.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <button class="dropdown-btn">Ismeri a különböző virtualizációs megoldások használatát: Hyper-V, KVM, Vmware.</button>
-          <div class="dropdown-content">
-            <p>Ez az első panel tartalma.</p>
-            <p>További szöveg itt.</p>
-          </div>
-        </div>
-
-        <div class="dropdown">
-          <button class="dropdown-btn">Ismeri néhány ismertebb konténertechnológia használatát (pl. Docker, LXC), képes konténert létrehozni, indítani, hálózati elérését konfigurálni.</button>
-          <div class="dropdown-content">
-            <p>Ez az első panel tartalma.</p>
-            <p>További szöveg itt.</p>
-          </div>
-        </div>
-
         <h1>Iéta1 - Virtualizáció és felhőtechnológiák (3+12 óra)</h1>
         <p>A témakör feladata, hogy megismertesse a tanulókat a virtualizáció céljával és megvalósítási módjaival, valamint a felhőtechnológiákkal (cloud computing). A témakör elsajátítását követően a tanuló:</p>
 
