--- a/8-hor/virtkont.html
+++ b/8-hor/virtkont.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Rendszerüzemeltetés</title>
+    <title>Operációs rendszerek</title>
     <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" href="panel.css">
 
@@ -18,7 +18,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="network">Rendszerüzemeltetés</h1>
+      <h1 class="os">Operációs rendszerek</h1>
     </header>
 
     <main>
@@ -26,24 +26,23 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="#" id="aktiv">Virtualizáció és konténerek</a></li>
             <li><a href="hor.html">Hálózati operációs rendszerek</a></li>
             <li><a href="windowsserver.html">Windows Server</a></li>
             <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
             <li><a href="winlinint.html">Windows és Linux integrációja</a></li>
-            <li><a href="#" id="aktiv">Alkalmazások üzemeltetése</a></li>
+            <li><a href="alkuz.html">Alkalmazások üzemeltetése</a></li>
             <li><a href="felho.html">Felhőszolgáltatások</a></li>
             <li><a href="projektek.html">Projektek</a></li>
           </ul>
         </nav>
       </aside>
       <section>
-        <h1>Alkalmazások üzemeltetése (4+31 óra)</h1>
-
-        <p>A témakör célja, hogy a tanulók megismerjék a hálózati környezetben működő alkalmazások telepítésének, karbantartásának alapvető módjait, valamint az ezzel kapcsolatos hibakeresés és elhárítás lépéseit. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
+        <h1>Szerverek és felhőszolgáltatások - Virtualizáció és konténerek (8+54 óra)</h1>
+        <p>A témakör célja az ismertebb virtualizációs technológiák mélyebb megismerése, a konténertechnológiákat is beleértve, valamint ezek segítségével virtuális gépek és konténerek létrehozása és menedzselése. A témakör elvégzését követően a tanuló az alábbi ismeretekkel és gyakorlati készségekkel fog rendelkezni:</p>
 
         <div class="dropdown">
-          <button class="dropdown-btn">Alkalmazások telepítése</button>
+          <button class="dropdown-btn">Ismeri a virtualizáció megvalósítási módjait, a szerver- és kliensoldali virtualizáció eszközeit.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
@@ -51,7 +50,7 @@
         </div>
 
         <div class="dropdown">
-          <button class="dropdown-btn">Alkalmazások verziófrissítése, migrációja</button>
+          <button class="dropdown-btn">Képes virtuális gépek telepítésére, hardverparamétereik beállítására, pillanatképek létrehozására.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
@@ -59,7 +58,7 @@
         </div>
 
         <div class="dropdown">
-          <button class="dropdown-btn">Biztonsági mentések elvégzése</button>
+          <button class="dropdown-btn">Ismeri a konténer fogalmát, alkalmazási lehetőségeit.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
@@ -67,7 +66,15 @@
         </div>
 
         <div class="dropdown">
-          <button class="dropdown-btn">Szoftverüzemeltetéshez kapcsolódó L2-es szintű hibaelhárítás, hibajegykezelés</button>
+          <button class="dropdown-btn">Ismeri a különböző virtualizációs megoldások használatát: Hyper-V, KVM, Vmware.</button>
+          <div class="dropdown-content">
+            <p>Ez az első panel tartalma.</p>
+            <p>További szöveg itt.</p>
+          </div>
+        </div>
+
+        <div class="dropdown">
+          <button class="dropdown-btn">Ismeri néhány ismertebb konténertechnológia használatát (pl. Docker, LXC), képes konténert létrehozni, indítani, hálózati elérését konfigurálni.</button>
           <div class="dropdown-content">
             <p>Ez az első panel tartalma.</p>
             <p>További szöveg itt.</p>
