--- a/8-hor/winlinint.html
+++ b/8-hor/winlinint.html
@@ -24,7 +24,8 @@
         <p><a href="../index.html">Vissza</a></p>
         <nav>
           <ul>
-            <li><a href="hor.html">Bevezetés</a></li>
+            <li><a href="virtkont.html">Virtualizáció és konténerek</a></li>
+            <li><a href="hor.html">Hálózati operációs rendszerek</a></li>
             <li><a href="windowsserver.html">Windows Server</a></li>
             <li><a href="ubuntuserver.html">Ubuntu Server</a></li>
             <li><a href="#" id="aktiv">Windows és Linux integrációja</a></li>
