--- a/8-hor/virtkont.html
+++ b/8-hor/virtkont.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="../static/Palkotikumicon.png">
 
-    <title>Operációs rendszerek</title>
+    <title>Rendszerüzemeltetés</title>
     <link rel="stylesheet" href="../static/main.css">
     <link rel="stylesheet" href="panel.css">
 
@@ -18,7 +18,7 @@
   <body>
     <header>
       <a href="../index.html"><img src="../static/Palkotikumlogo2.png" alt="p"></a>
-      <h1 class="os">Operációs rendszerek</h1>
+      <h1 class="os">Rendszerüzemeltetés</h1>
     </header>
 
     <main>
