--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         <div>
           <h3>Rendszerüzemeltetés</h3>
           <p>A hálózati rendszerüzemeltetés a számítógépes hálózatok működésének és teljesítményének biztosítását jelenti, amely magában foglalja a hálózati eszközök konfigurálását, karbantartását és felügyeletét. Az üzemeltetők feladatai közé tartozik a hálózati infrastruktúra, mint például routerek, switch-ek és tűzfalak, megfelelő működésének ellenőrzése, a biztonsági intézkedések alkalmazása, valamint a problémák gyors azonosítása és elhárítása. A hálózati rendszerüzemeltetés célja a zavartalan adatforgalom fenntartása, a rendszer megbízhatóságának növelése és a potenciális biztonsági kockázatok minimalizálása, hogy a felhasználók és alkalmazások hatékonyan és biztonságosan tudjanak működni.</p>
-          <button><a href="8-hor/hor.html">Tovább</a></button>
+          <button><a href="8-hor/virtkont.html">Tovább</a></button>
         </div>
         <img src="8-hor/technology-8676538_640.jpg" alt="technology-8676538_640">
       </section>
