--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         <div>
           <h3>Operációs rendszerek</h3>
           <p>Az operációs rendszer (OS) a számítógépek és mobil eszközök alapvető szoftvere, amely a hardver és a felhasználói alkalmazások közötti kommunikációt és erőforrások kezelését irányítja. Az OS biztosítja az alapvető funkciókat, mint például a fájlkezelést, a memóriakezelést, a folyamatok ütemezését és a perifériák kezelését, így lehetővé téve a felhasználók számára a különböző programok futtatását és a hatékony munkavégzést. Népszerű operációs rendszerek közé tartozik a Microsoft Windows, macOS, Linux és az Android. Az operációs rendszerek kulcsfontosságú szerepet játszanak a számítógépes rendszerek stabilitásának, biztonságának és teljesítményének biztosításában.</p>
-          <button><a href="3-rendszer/os.html">Tovább</a></button>
+          <button><a href="3-rendszer/virtkont.html">Tovább</a></button>
         </div>
       </section>
 
