--- a/office/szoveg.html
+++ b/office/szoveg.html
@@ -52,6 +52,9 @@
         <p><a href="https://www.nkp.hu/tankonyv/digitalis-kultura-7-nat2020/fejezet_02_fejezetnyito" target="_blank">Szövegszerkesztés 7.</a></p>
         <p><a href="https://www.nkp.hu/tankonyv/digitalis_kultura_9_nat2020/fejezet_01_fejezetnyito" target="_blank">Szövegszerkesztés 9.</a></p>
         <p><a href="https://www.nkp.hu/tankonyv/digitalis-kultura-11-nat2020/fejezet_01_fejezetnyito" target="_blank">Szövegszerkesztés 11.</a></p>
+
+        <h3>Hóber Krisztián - 10 ujjas gépelés</h3>
+        <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?si=R6HRajBYGrw-h3v8&amp;list=PLiiPwfHxduKxxoyVcetJI554NppcZ1NnV" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></p>
     
         <h3>Frank Miklós - Word - szövegszerkesztés</h3>
         <p><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/videoseries?list=PLTsW1x2g5QyJd97-ZqlxquXiSmgQkncQ9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></p>
